--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-ejb.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-ejb.windup.yaml
@@ -5,7 +5,7 @@
     when:
     - java.referenced:
         location: IMPORT
-        pattern: weblogic.{type}.{*}
+        pattern: weblogic.(ejb|ejb20|ejbgen)?.{*}
   - message: "\n                        This application contains WebLogic proprietary
       `weblogic.javaee.TransactionTimeoutSeconds` annotation.\n                    "
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-ejb.windup.xml-1
@@ -26,4 +26,4 @@
     when:
     - java.referenced:
         location: INHERITANCE
-        pattern: weblogic.ejb.{type}
+        pattern: weblogic.ejb.(GenericEntityBean|GenericMessageDrivenBean|GenericSessionBean)
