--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap4and5/jboss-eap4and5to6and7-java.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap4and5/jboss-eap4and5to6and7-java.windup.yaml
@@ -30,4 +30,4 @@
     when:
     - java.referenced:
         location: INHERITANCE
-        pattern: org.jboss.system.{classes}
+        pattern: org.jboss.system.(ServiceMBean|ServiceMBeanSupport)
