--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-java.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-java.windup.yaml
@@ -68,4 +68,4 @@
     when:
     - java.referenced:
         location: ANNOTATION
-        pattern: org.jboss.logging.{annotation}
+        pattern: org.jboss.logging.(Cause|Field|FormatWith|LoggingClass|LogMessage|Message|MessageBundle|MessageLogger|Param|Property)
