--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/ws-security.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/ws-security.windup.yaml
@@ -14,7 +14,7 @@
     when:
     - java.referenced:
         location: IMPORT
-        pattern: org.apache.ws.security.saml.ext.{SAMLClassAndPackages}{*}
+        pattern: org.apache.ws.security.saml.ext.(bean.|builder.|OpenSAMLBootstrap|OpenSAMLUtil|SAMLCallback){*}
   - message: "\n                        The `org.apache.ws.security.saml.ext.AssertionWrapper`
       class have been renamed and moved to the `org.apache.wss4j.common.saml.SamlAssertionWrapper`
       class.\n                        The application must be changed to reference
