--- a/analyzer-lsp-rules/rules/rules-archived/quarkus1/quarkus1-11/quarkus1-12-vertx.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-archived/quarkus1/quarkus1-11/quarkus1-12-vertx.windup.yaml
@@ -5,4 +5,4 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-archived/quarkus1/quarkus1-11/quarkus1-12-vertx.windup.xml-0
     when:
     - java.referenced:
-        pattern: io.vertx.{packages}.{*}
+        pattern: io.vertx.(axle|reactivex).{*}
