--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.yaml
@@ -2,7 +2,7 @@
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-0
     when:
     - java.referenced:
-        pattern: '{domain}.oswego.cs.dl.util.concurrent.{*}'
+        pattern: (edu|EDU).oswego.cs.dl.util.concurrent.{*}
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-1
     when:
     - java.referenced:
@@ -10,15 +10,15 @@
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-2
     when:
     - java.referenced:
-        pattern: org.mule.{package-remainder}.{type}
+        pattern: org.mule.(.*)?.[^.]+
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-3
     when:
     - java.referenced:
-        pattern: mx4j.{package-remainder}.{type}
+        pattern: mx4j.(.*)?.[^.]+
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-4
     when:
     - java.referenced:
-        pattern: org.osoa.sca.annotations.{type}
+        pattern: org.osoa.sca.annotations.[^.]+
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-5
     when:
     - java.referenced:
@@ -27,23 +27,23 @@
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-6
     when:
     - java.referenced:
-        pattern: com.tibco.{package-remainder}.{type}
+        pattern: com.tibco.(.*)?.[^.]+
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-7
     when:
     - java.referenced:
-        pattern: com.crystaldecisions.{package-remainder}.{type}
+        pattern: com.crystaldecisions.(.*)?.[^.]+
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-8
     when:
     - java.referenced:
-        pattern: com.iona.{package-remainder}.{type}
+        pattern: com.iona.(.*)?.[^.]+
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-9
     when:
     - java.referenced:
-        pattern: org.apache.{subpackage}.{*}
+        pattern: org.apache.(activeio|activemq).{*}
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-10
     when:
     - java.referenced:
-        pattern: org.{subpackage}.{package-remainder}{type}
+        pattern: org.(jboss|jbpm).([a-z]+\.)*[^.()]+
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/generic-catchall.windup.xml-11
     when:
     - java.referenced:
