--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/websphere/websphere-jms.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/websphere/websphere-jms.windup.yaml
@@ -2,7 +2,7 @@
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/websphere/websphere-jms.windup.xml-0
     when:
     - java.referenced:
-        pattern: '{package}.{type}'
+        pattern: com.ibm(\..*)?\.jms.[^.]+
   - message: "\n                        IBM {prefix}{type}ConnectionFactory is a proprietary
       encapsulation of JMS servers to which Connections can be created for\n                        message
       distribution. This reference should be replaced with the Java EE standard API:
@@ -10,14 +10,14 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/websphere/websphere-jms.windup.xml-1
     when:
     - java.referenced:
-        pattern: '{package}.{prefix}{type}ConnectionFactory'
+        pattern: com.ibm(\.[^.]*)*\.jms.(Jms|MQeJNDI|MQe|MQ)?+[^.]*?ConnectionFactory
   - message: "\n                        IBM JMS API {type}s are used for sending/reading
       messages to/from a topic or queue. This reference should be\n                        replaced
       with the Java EE standard API `javax.jms.Message{type}`.\n                    "
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/websphere/websphere-jms.windup.xml-2
     when:
     - java.referenced:
-        pattern: '{package}.JmsMsg{type}'
+        pattern: com.ibm(\..*)?\.jms.JmsMsg(Producer|Consumer)
   - message: "\n                        `MQe{type}Queue` is a WebSphere implementation
       of a JMS `Queue` and should be migrated to\n                        the Java
       EE 6 JMS standard interface `javax.jms.Queue`.\n                    "
@@ -28,8 +28,8 @@
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/websphere/websphere-jms.windup.xml-4
     when:
     - java.referenced:
-        pattern: '{package}.{prefix}{type}Message'
+        pattern: com.ibm(\..*)?\.jms.(JMS|MQe|MQ)(Text|Stream|Object|Map|Bytes)?Message
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/websphere/websphere-jms.windup.xml-5
     when:
     - java.referenced:
-        pattern: '{package}.{prefix}{type}'
+        pattern: com.ibm(\..*)?\.jms.(Jms|MQe|MQ)[^.]+
