--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/websphere/websphere-mq.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/websphere/websphere-mq.windup.yaml
@@ -2,7 +2,7 @@
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/websphere/websphere-mq.windup.xml-0
     when:
     - java.referenced:
-        pattern: '{package}.{type}'
+        pattern: com.ibm(\..*)?\.(mq|wmq).*.[^.]+
   - message: "`WMQInitialContextFactory` is an implementation of `InitialContextFactory`\n
       \                       used to get object instances from JNDI. The\n                        equivalent
       functionality needs to be configured on JBoss EAP 7 using ActiveMQ Artemis.\n
