--- a/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/removed-classes.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/removed-classes.windup.yaml
@@ -7,4 +7,4 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/removed-classes.windup.xml-0
     when:
     - java.referenced:
-        pattern: java.util.jar.{class-name}
+        pattern: java.util.jar.(Pack200|Pack200.Packer|Pack200.Unpacker)
