--- a/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.yaml
@@ -5,21 +5,21 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-0
     when:
     - java.referenced:
-        pattern: java.security.{class-name}
+        pattern: java.security.(AccessController|AccessControlContext|AccessControlException|DomainCombiner|Policy|PolicySpi|Policy.Parameters)
   - message: "\n                        References to Java Security Manager API classes
       deprecated in Java 17. Any references to it should be removed. \n                        See
       the link for further information.\n                    "
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-1
     when:
     - java.referenced:
-        pattern: '{fqcn}'
+        pattern: (java.lang.SecurityManager|java.rmi.RMISecurityManager|javax.security.auth.SubjectDomainCombiner)
   - message: "\n                        The java.lang.System::getSecurityManager and
       java.lang.System::setSecurityManager methods have been deprecated in Java 17.
       \n                        See the link for further information.\n                    "
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-2
     when:
     - java.referenced:
-        pattern: java.lang.System.{method-name}({*})
+        pattern: java.lang.System.(getSecurityManager|setSecurityManager)({*})
   - message: "\n                        The java.lang.Thread::checkAccess method has
       been deprecated in Java 17. \n                        See the link for further
       information.\n                    "
@@ -47,11 +47,11 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-6
     when:
     - java.referenced:
-        pattern: java.util.concurrent.Executors.{method-names}({*})
+        pattern: java.util.concurrent.Executors.(privilegedCallable|privilegedCallableUsingCurrentClassLoader|privilegedThreadFactory)({*})
   - message: "\n                        The javax.security.auth.Subject::{meth-name}
       method has been deprecated in Java 17. \n                        See the link
       for further information.\n                    "
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-7
     when:
     - java.referenced:
-        pattern: javax.security.auth.Subject.{meth-name}({*})
+        pattern: javax.security.auth.Subject.(doAsPrivileged|getSubject)({*})
