--- a/analyzer-lsp-rules/rules/rules-reviewed/openshift/socket-communication.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openshift/socket-communication.windup.yaml
@@ -9,7 +9,7 @@
     when:
     - or:
       - java.referenced:
-          pattern: java.net.{socketclass}{*}
+          pattern: java.net.(Socket|MulticastSocket|DatagramSocket|InetSocketAddress){*}
       - java.referenced:
           pattern: java.net.ServerSocket{*}
       - java.referenced:
@@ -26,4 +26,4 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openshift/socket-communication.windup.xml-1
     when:
     - java.referenced:
-        pattern: java.nio.channels.{niochannelclass}{*}
+        pattern: java.nio.channels.(NetworkChannel|MulticastChannel|DatagramChannel|AsynchronousSocketChannel|SocketChannel){*}
